--- a/_toc.yml
+++ b/_toc.yml
@@ -4,7 +4,12 @@ chapters:
   - file: setup/README.md
   - file: models/README.md
     sections:
-      - file: models/fields/README.md
-        sections: 
-          - file: models/fields/id.md
-          - file: models/fields/char.md
+      - file: model_layer/README.md
+        sections:
+          - file: model_layer/models/README.md
+          - file: model_layer/fields/README.md
+            sections: 
+              - file: model_layer/fields/index.md
+              - file: model_layer/fields/description.md
+              - file: model_layer/fields/datetime.md
+              - file: model_layer/fields/relations.md
