refactored: 重新整理手册

--- a/_toc.yml
+++ b/_toc.yml
@@ -1,15 +1,33 @@
 format: jb-book
 root: README.md
-chapters:
-  - file: setup/README.md
-  - file: models/README.md
-    sections:
-      - file: model_layer/README.md
+parts:
+  - caption: 初始化配置
+    chapters:
+      - file: init/README.md
         sections:
-          - file: model_layer/models/README.md
-          - file: model_layer/fields/README.md
-            sections: 
-              - file: model_layer/fields/index.md
-              - file: model_layer/fields/description.md
-              - file: model_layer/fields/datetime.md
-              - file: model_layer/fields/relations.md
+          - file: init/pycharm.md
+  - caption: 框架核心
+  - chapters:
+      - file: models/README.md
+        sections:
+          - file: model_layer/README.md
+            sections:
+              - file: model_layer/models/README.md
+              - file: model_layer/fields/README.md
+                sections: 
+                  - file: model_layer/fields/index.md
+                  - file: model_layer/fields/description.md
+                  - file: model_layer/fields/datetime.md
+                  - file: model_layer/fields/relations.md
+      - file: testing/README.md
+        sections:
+          - testing/database.md
+      - file: settings/README.md
+  - caption: 应用场景
+    chapters:
+      - file: multi_tenants/README.md
+        sections:
+          - file: multi_tenants/settings.md
+  - caption: 库开发
+    chapters:
+      - file: packages/sdk.md
